--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
+# Configuración de la aplicación
 spring.application.name=LiterAluraChallengeJava
+server.port=8081
 
 # Configuración de H2 Database
 spring.datasource.url=jdbc:h2:mem:literalura
