--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,21 @@
 # Configuración de la aplicación
 spring.application.name=LiterAluraChallengeJava
-server.port=8081
 
-# Configuración de H2 Database
-spring.datasource.url=jdbc:h2:mem:literalura
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# Configuración de MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/literalura?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=22021989
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 # Configuración de JPA
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
+
+# Configuración del servidor
+server.port=8090
+
+# Configuración de logging
+logging.level.org.hibernate.SQL=OFF
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=OFF
+logging.level.org.springframework=INFO
