--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,13 @@
 			<version>2.4.1</version>
 		</dependency>
 
+		<!-- Apache POI para exportar a Excel -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>5.2.3</version>
+		</dependency>
+
 		<!-- Test -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
