feat: Importación robusta de libros desde CSV/Excel con progreso en tiempo real, feedback visual, manejo de duplicados y errores. Integración de OpenCSV. Actualización de README.
- Implementada importación de libros desde archivos CSV y Excel con ventana de progreso, barra de avance y listado de títulos importados, duplicados y errores.
- Integración de OpenCSV para manejo robusto de archivos CSV con comillas y comas en los campos.
- El proceso de importación ahora es interactivo y no bloquea la interfaz.
- Se muestra feedback visual al usuario durante y al finalizar la importación.
- Detección y reporte de duplicados y errores sin detener el proceso.
- Actualización del README con instrucciones de uso, formato esperado y dependencias.
- Agregada dependencia de OpenCSV (5.7.1) en pom.xml.

--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,13 @@
 			<version>5.2.3</version>
 		</dependency>
 
+		<!-- OpenCSV -->
+		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>5.7.1</version>
+		</dependency>
+
 		<!-- Test -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
